# pit-fintech

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  compose.yaml  make.ps1  pyproject.toml  summary_expectation.txt
.github/workflows/: ci.yml
artifacts/changelog/: CHANGELOG.md  PROJECT_STATUS.md  README.md
artifacts/changelog/milestones/: M001-sprint-1-foundation.md  M002-milestone-audit-governance.md  M003-proposal-html-deck.md  M004-drawio-target-architecture.md  M005-sprint-scope-refinement.md  M006-project-self-review-checklist.md  M007-meetup-speaker-script.md  (+4 more)
data/fixtures/: expected_features.json  temporal_cases.jsonl  temporal_cases.parquet
docker/: Dockerfile
docs/: architecture-v1.md  data-access.md  makefile-adaptation.md  research-protocol.md
docs/adr/: 001-temporal-entity-contract.md
docs/architecture/: pit-feature-platform-high-level.md
docs/feature-store/: point-in-time-feature-store-proposal.md  reference-architecture-comparison.md  sprint-1-implementation-guide.md  sprint-2-implementation-guide.md  sprint-3-implementation-guide.md
docs/reports/: catalog.md  data-profile-sample.md  knowledge-defense-checklist.md  leakage-prototype.md  pit-fintech-meetup-10min-script.md  pit-fintech-proposal-slides.html  project-self-review-checklist.md  sprint-1-gate.md
feature_repo/: __init__.py  feature_specs.py
notebooks/: 01_data_profile.ipynb  02_entity_temporal_analysis.ipynb  03_leakage_prototype.ipynb
scripts/: verify_milestone_changelog.py
src/pit_fintech/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/fixtures/: paysim_schema_sample.csv
tests/integration/: test_sample_lakehouse.py
tests/temporal/: test_reference_oracle.py
tests/unit/: test_canonical.py  test_feature_contract.py  test_milestone_changelog_hook.py  test_paysim.py  test_sample_artifact.py
(+15 files in other folders)
