[project]
name = "pit-fintech"
version = "0.1.0"
description = "Point-in-time correct feature platform for reproducible fraud scoring"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "deltalake>=1.2,<2",
    "duckdb>=1.4,<2",
    "psutil>=7,<8",
    "pyarrow>=21,<23",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "rich>=14,<15",
    "structlog>=25,<26",
    "typer>=0.20,<1",
]

[project.scripts]
pit = "pit_fintech.cli:app"

[dependency-groups]
dev = [
    "hypothesis>=6.140,<7",
    "ipykernel>=7,<8",
    "jupyterlab>=4.4,<5",
    "nbclient>=0.10,<1",
    "pre-commit>=4.3,<5",
    "pytest>=8.4,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.13,<1",
]
training = [
    "lightgbm>=4.6,<5",
    "mlflow>=3.5,<4",
    "scikit-learn>=1.7,<2",
]
tracking = [
    "mlflow>=3.5,<4",
]
serving = [
    "fastapi>=0.118,<1",
    "httpx>=0.28,<1",
    "prometheus-client>=0.23,<1",
    "redis>=6.4,<8",
    "uvicorn[standard]>=0.37,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pit_fintech"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "temporal: point-in-time correctness and temporal edge cases",
    "integration: tests spanning storage or service boundaries",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "feature_repo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["pit_fintech"]

[tool.coverage.report]
show_missing = true
skip_covered = true
